Fix size of main
Was allowed to scroll toolbar out of view when grew too large. Use flex
to fix.

--- a/stylesheets/css/main.css
+++ b/stylesheets/css/main.css
@@ -10,7 +10,7 @@ main {
 	overflow-y: auto;
 }
 main > [contenteditable="true"] {
-	flex: 1 0 auto;
+	flex: 0 1 61vh;
 	overflow: auto;
 	width: 80%;
 	padding: 0 1em;
